5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1865_1535.log
== TEST (2019-07-04 10:15:56) 
-- CODE:
from math import*
v = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1):
	a = a + (-1)**i + (v**(2*i+1)/(2*i+1))
	i = i + 1
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(x >= -1 and x <= 1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:05) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:14) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:19) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:47) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:47) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:03) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
i = k
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:29) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
i = k
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:22:50) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 0
a = 0
i = k
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:23:17) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
i = k
while(x >= -1 and x <= 1):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:24:26) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
i = k
while(x >= -1 and x <= 1):
	a = a + (x + (-1)**i + (x**(2*i+1)/(2*i+1)))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
-0.328
1.287552
0.891551
2.492671
2.093001
3.693101
3.293132
4.893142
4.493146
6.093147
5.693147
7.293147
6.893147
8.493147
8.093147
9.693147
9.293147
10.893147
10.493147
12.093147
11.693147
13.293147
12.893147
14.493147
14.093147
15.693147
15.293147
16.893147
16.493147
18.093147
17.693147
19.293147
18.893147
20.493147
20.093147
21.693147
21.293147
22.893147
22.493147
24.093147
23.693147
25.293147
24.893147
26.493147
26.093147
27.693147
27.293147
28.893147
28.493147
30.093147
29.693147
31.293147
30.893147
32.493147
32.093147
33.693147
33.293147
34.893147
34.493147
36.093147
35.693147
37.293147
36.893147
38.493147
38.093147
39.693147
39.293147
40.893147
40.493147
42.093147
41.693147
43.293147
42.893147
44.493147
44.093147
45.693147
45.293147
46.893147
46.493147
48.093147
47.693147
49.293147
48.893147
50.493147
50.093147
51.693147
51.293147
52.893147
52.493147
54.093147
53.693147
55.293147
54.893147
56.493147
56.093147
57.693147
57.293147
58.893147
58.493147
60.093147
59.693147
61.293147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:24:57) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
i = k
while(x >= -1 and x <= 1):
	a = a + (x + (-1)**i + (x**(2*i+1)/(2*i+1)))
	i = i + 1
print(round(a, 6))
	
-- OUTPUT:
-0.328
1.287552
0.891551
2.492671
2.093001
3.693101
3.293132
4.893142
4.493146
6.093147
5.693147
7.293147
6.893147
8.493147
8.093147
9.693147
9.293147
10.893147
10.493147
12.093147
11.693147
13.293147
12.893147
14.493147
14.093147
15.693147
15.293147
16.893147
16.493147
18.093147
17.693147
19.293147
18.893147
20.493147
20.093147
21.693147
21.293147
22.893147
22.493147
24.093147
23.693147
25.293147
24.893147
26.493147
26.093147
27.693147
27.293147
28.893147
28.493147
30.093147
29.693147
31.293147
30.893147
32.493147
32.093147
33.693147
33.293147
34.893147
34.493147
36.093147
35.693147
37.293147
36.893147
38.493147
38.093147
39.693147
39.293147
40.893147
40.493147
42.093147
41.693147
43.293147
42.893147
44.493147
44.093147
45.693147
45.293147
46.893147
46.493147
48.093147
47.693147
49.293147
48.893147
50.493147
50.093147
51.693147
51.293147
52.893147
52.493147
54.093147
53.693147
55.293147
54.893147
56.493147
56.093147
57.693147
57.293147
58.893147
58.493147
60.093147
59.693147
61.293147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:02) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 1
a = 0
i = k
while(x >= -1 and x <= 1):
	a = a + (x + (-1)**i + (x**(2*i+1)/(2*i+1)))
	i = i + 1
print(round(a, 6))
	
-- OUTPUT:
-0.328
1.287552
0.891551
2.492671
2.093001
3.693101
3.293132
4.893142
4.493146
6.093147
5.693147
7.293147
6.893147
8.493147
8.093147
9.693147
9.293147
10.893147
10.493147
12.093147
11.693147
13.293147
12.893147
14.493147
14.093147
15.693147
15.293147
16.893147
16.493147
18.093147
17.693147
19.293147
18.893147
20.493147
20.093147
21.693147
21.293147
22.893147
22.493147
24.093147
23.693147
25.293147
24.893147
26.493147
26.093147
27.693147
27.293147
28.893147
28.493147
30.093147
29.693147
31.293147
30.893147
32.493147
32.093147
33.693147
33.293147
34.893147
34.493147
36.093147
35.693147
37.293147
36.893147
38.493147
38.093147
39.693147
39.293147
40.893147
40.493147
42.093147
41.693147
43.293147
42.893147
44.493147
44.093147
45.693147
45.293147
46.893147
46.493147
48.093147
47.693147
49.293147
48.893147
50.493147
50.093147
51.693147
51.293147
52.893147
52.493147
54.093147
53.693147
55.293147
54.893147
56.493147
56.093147
57.693147
57.293147
58.893147
58.493147
60.093147
59.693147
61.293147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:34) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 0
a = 0
i = k
while(x >= -1 and x <= 1):
	a = a + (x + (-1)**i + (x**(2*i+1)/(2*i+1)))
	i = i + 1
print(round(a, 6))
	
-- OUTPUT:
-0.328
1.287552
0.891551
2.492671
2.093001
3.693101
3.293132
4.893142
4.493146
6.093147
5.693147
7.293147
6.893147
8.493147
8.093147
9.693147
9.293147
10.893147
10.493147
12.093147
11.693147
13.293147
12.893147
14.493147
14.093147
15.693147
15.293147
16.893147
16.493147
18.093147
17.693147
19.293147
18.893147
20.493147
20.093147
21.693147
21.293147
22.893147
22.493147
24.093147
23.693147
25.293147
24.893147
26.493147
26.093147
27.693147
27.293147
28.893147
28.493147
30.093147
29.693147
31.293147
30.893147
32.493147
32.093147
33.693147
33.293147
34.893147
34.493147
36.093147
35.693147
37.293147
36.893147
38.493147
38.093147
39.693147
39.293147
40.893147
40.493147
42.093147
41.693147
43.293147
42.893147
44.493147
44.093147
45.693147
45.293147
46.893147
46.493147
48.093147
47.693147
49.293147
48.893147
50.493147
50.093147
51.693147
51.293147
52.893147
52.493147
54.093147
53.693147
55.293147
54.893147
56.493147
56.093147
57.693147
57.293147
58.893147
58.493147
60.093147
59.693147
61.293147
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:41) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
k = 0
a = 0
i = k
while(x >= -1 and x <= 1):
	a = a + (x + (-1)**i + (x**(2*i+1)/(2*i+1)))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
2.2
1.872
3.487552
3.091551
4.692671
4.293001
5.893101
5.493132
7.093142
6.693146
8.293147
7.893147
9.493147
9.093147
10.693147
10.293147
11.893147
11.493147
13.093147
12.693147
14.293147
13.893147
15.493147
15.093147
16.693147
16.293147
17.893147
17.493147
19.093147
18.693147
20.293147
19.893147
21.493147
21.093147
22.693147
22.293147
23.893147
23.493147
25.093147
24.693147
26.293147
25.893147
27.493147
27.093147
28.693147
28.293147
29.893147
29.493147
31.093147
30.693147
32.293147
31.893147
33.493147
33.093147
34.693147
34.293147
35.893147
35.493147
37.093147
36.693147
38.293147
37.893147
39.493147
39.093147
40.693147
40.293147
41.893147
41.493147
43.093147
42.693147
44.293147
43.893147
45.493147
45.093147
46.693147
46.293147
47.893147
47.493147
49.093147
48.693147
50.293147
49.893147
51.493147
51.093147
52.693147
52.293147
53.893147
53.493147
55.093147
54.693147
56.293147
55.893147
57.493147
57.093147
58.693147
58.293147
59.893147
59.493147
61.093147
60.693147
62.293147
61.893147
63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:14) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
2.2
1.872
3.487552
3.091551
4.692671
4.293001
5.893101
5.493132
7.093142
6.693146
8.293147
7.893147
9.493147
9.093147
10.693147
10.293147
11.893147
11.493147
13.093147
12.693147
14.293147
13.893147
15.493147
15.093147
16.693147
16.293147
17.893147
17.493147
19.093147
18.693147
20.293147
19.893147
21.493147
21.093147
22.693147
22.293147
23.893147
23.493147
25.093147
24.693147
26.293147
25.893147
27.493147
27.093147
28.693147
28.293147
29.893147
29.493147
31.093147
30.693147
32.293147
31.893147
33.493147
33.093147
34.693147
34.293147
35.893147
35.493147
37.093147
36.693147
38.293147
37.893147
39.493147
39.093147
40.693147
40.293147
41.893147
41.493147
43.093147
42.693147
44.293147
43.893147
45.493147
45.093147
46.693147
46.293147
47.893147
47.493147
49.093147
48.693147
50.293147
49.893147
51.493147
51.093147
52.693147
52.293147
53.893147
53.493147
55.093147
54.693147
56.293147
55.893147
57.493147
57.093147
58.693147
58.293147
59.893147
59.493147
61.093147
60.693147
62.293147
61.893147
63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:44) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = a + x (-1)**i + (x**(2*i+1)/(2*i+1))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:52) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:59) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:01) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:02) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:02) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:02) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:02) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:13) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = a + 1
	print(round(a, 6))
	
-- OUTPUT:
3.2
3.872
6.487552
7.091551
9.692671
10.293001
12.893101
13.493132
16.093142
16.693146
19.293147
19.893147
22.493147
23.093147
25.693147
26.293147
28.893147
29.493147
32.093147
32.693147
35.293147
35.893147
38.493147
39.093147
41.693147
42.293147
44.893147
45.493147
48.093147
48.693147
51.293147
51.893147
54.493147
55.093147
57.693147
58.293147
60.893147
61.493147
64.093147
64.693147
67.293147
67.893147
70.493147
71.093147
73.693147
74.293147
76.893147
77.493147
80.093147
80.693147
83.293147
83.893147
86.493147
87.093147
89.693147
90.293147
92.893147
93.493147
96.093147
96.693147
99.293147
99.893147
102.493147
103.093147
105.693147
106.293147
108.893147
109.493147
112.093147
112.693147
115.293147
115.893147
118.493147
119.093147
121.693147
122.293147
124.893147
125.493147
128.093147
128.693147
131.293147
131.893147
134.493147
135.093147
137.693147
138.293147
140.893147
141.493147
144.093147
144.693147
147.293147
147.893147
150.493147
151.093147
153.693147
154.293147
156.893147
157.4931
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:04) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(x, 6))
	
-- OUTPUT:
2.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:42) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = k - 1
	print(round(x, 6))
	
-- OUTPUT:
2.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:25) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = 0 + x
	
	print(round(a, 6))
	
-- OUTPUT:
2.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:42) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = i + 1
	a = 0 + x
	
	print(round(a, 6))
	
-- OUTPUT:
-0.328
0.671241
-0.319988
0.680008
-0.318685
0.681315
-0.318474
0.681526
-0.318438
0.681562
-0.318432
0.681568
-0.318431
0.681569
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.31843
0.68157
-0.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:29) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = k - 1
	a = 0 + x
	print(round(a, 6))
	
-- OUTPUT:
-0.328
0.671241
1.698494
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:57) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = k - 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:14) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = k - 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:19) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = k - 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:25) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	i = k - 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:56) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	a = a + x
	i = k - 1
	print(round(a, 6))
	
-- OUTPUT:
-0.328
0.343241
2.041735
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:11) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	a = a + x
	i = k - 1
	print(round(x, 6))
	
-- OUTPUT:
-0.328
0.671241
1.698494
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:27) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + (-1)**i + (x**(2*i+1)/(2*i+1))
	a = a + x
	i = k - 1
	print(round(a, 6))
	
-- OUTPUT:
-0.328
0.343241
2.041735
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:04) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	a = a + x
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0.528
1.064207
1.598594
2.133375
2.668064
3.202775
3.73748
4.272187
4.806893
5.3416
5.876306
6.411013
6.945719
7.480426
8.015132
8.549839
9.084545
9.619252
10.153958
10.688665
11.223371
11.758078
12.292784
12.827491
13.362197
13.896904
14.43161
14.966317
15.501023
16.03573
16.570436
17.105143
17.639849
18.174556
18.709262
19.243969
19.778675
20.313381
20.848088
21.382794
21.917501
22.452207
22.986914
23.52162
24.056327
24.591033
25.12574
25.660446
26.195153
26.729859
27.264566
27.799272
28.333979
28.868685
29.403392
29.938098
30.472805
31.007511
31.542218
32.076924
32.611631
33.146337
33.681044
34.21575
34.750457
35.285163
35.81987
36.354576
36.889283
37.423989
37.958696
38.493402
39.028108
39.562815
40.097521
40.632228
41.166934
41.701641
42.236347
42.771054
43.30576
43.840467
44.375173
44.90988
45.444586
45.979293
46.513999
47.048706
47.583412
48.118119
48.652825
49.187532
49.722238
50.256945
50.791651
51.326358
51.861064
52.395771
52.930477
53.465184
53.99989
54.534597
55.069303
55.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:34) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 1
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:00) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(x, 6))
	
-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:05) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(x, 6))
	
-- OUTPUT:
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
0.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:25) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
1.2
1.728
2.343552
2.939553
3.540673
4.140343
4.740443
5.340412
5.940422
6.540419
7.14042
7.740419
8.34042
8.940419
9.54042
10.140419
10.74042
11.34042
11.94042
12.54042
13.14042
13.74042
14.34042
14.94042
15.54042
16.14042
16.74042
17.34042
17.94042
18.54042
19.14042
19.74042
20.34042
20.94042
21.54042
22.14042
22.74042
23.34042
23.94042
24.54042
25.14042
25.74042
26.34042
26.94042
27.54042
28.14042
28.74042
29.34042
29.94042
30.54042
31.14042
31.74042
32.34042
32.94042
33.54042
34.14042
34.74042
35.34042
35.94042
36.54042
37.14042
37.74042
38.34042
38.94042
39.54042
40.14042
40.74042
41.34042
41.94042
42.54042
43.14042
43.74042
44.34042
44.94042
45.54042
46.14042
46.74042
47.34042
47.94042
48.54042
49.14042
49.74042
50.34042
50.94042
51.54042
52.14042
52.74042
53.34042
53.94042
54.54042
55.14042
55.74042
56.34042
56.94042
57.54042
58.14042
58.74042
59.34042
59.94042
60.54042
61.14042
61.74042
62.34042
62.94042
63.54042
64.14042
64.74042
65.34042
65.94042
66.54042
67.14042
67.74042
68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:36) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + (x + ((-1)**i) * (x**(2*i+1)/(2*i+1))) * k
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
3.6
5.184
7.030656
8.818659
10.622018
12.421029
14.22133
16.021236
17.821266
19.621256
21.421259
23.221258
25.021259
26.821258
28.621259
30.421258
32.221259
34.021259
35.821259
37.621259
39.421259
41.221259
43.021259
44.821259
46.621259
48.421259
50.221259
52.021259
53.821259
55.621259
57.421259
59.221259
61.021259
62.821259
64.621259
66.421259
68.221259
70.021259
71.821259
73.621259
75.421259
77.221259
79.021259
80.821259
82.621259
84.421259
86.221259
88.021259
89.821259
91.621259
93.421259
95.221259
97.021259
98.821259
100.621259
102.421259
104.221259
106.021259
107.821259
109.621259
111.421259
113.221259
115.021259
116.821259
118.621259
120.421259
122.221259
124.021259
125.821259
127.621259
129.421259
131.221259
133.021259
134.821259
136.621259
138.421259
140.221259
142.021259
143.821259
145.621259
147.421259
149.221259
151.021259
152.821259
154.621259
156.421259
158.221259
160.021259
161.821259
163.621259
165.421259
167.221259
169.021259
170.821259
172.621259
174.421259
176.221259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:37) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	a = a + (x + ((-1)**i) * (x**(2*i+1)/(2*i+1))) * k
	i = i + 1
	print(round(a, 6))
	
-- OUTPUT:
3.6
5.184
7.030656
8.818659
10.622018
12.421029
14.22133
16.021236
17.821266
19.621256
21.421259
23.221258
25.021259
26.821258
28.621259
30.421258
32.221259
34.021259
35.821259
37.621259
39.421259
41.221259
43.021259
44.821259
46.621259
48.421259
50.221259
52.021259
53.821259
55.621259
57.421259
59.221259
61.021259
62.821259
64.621259
66.421259
68.221259
70.021259
71.821259
73.621259
75.421259
77.221259
79.021259
80.821259
82.621259
84.421259
86.221259
88.021259
89.821259
91.621259
93.421259
95.221259
97.021259
98.821259
100.621259
102.421259
104.221259
106.021259
107.821259
109.621259
111.421259
113.221259
115.021259
116.821259
118.621259
120.421259
122.221259
124.021259
125.821259
127.621259
129.421259
131.221259
133.021259
134.821259
136.621259
138.421259
140.221259
142.021259
143.821259
145.621259
147.421259
149.221259
151.021259
152.821259
154.621259
156.421259
158.221259
160.021259
161.821259
163.621259
165.421259
167.221259
169.021259
170.821259
172.621259
174.421259
176.221259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:49) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(x, 6))
	
-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:55:11) 
-- CODE:
from math import*
x = float(input("v: "))
k = int(input("k: "))
i = 0
a = 0
while(x >= -1 and x <= 1 and k > 0):
	x = x + ((-1)**i) * (x**(2*i+1)/(2*i+1))
	i = i + 1
	print(round(a, 6))
	
-- EXECUTION TIME:
2.97997
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
v: k: 0.5
0.458333
0.462379
0.461733
0.461839
0.46182
0.461824
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0.461823
0
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
